# ntfyr

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
ntfyr/: __init__.py  __main__.py  _common.py  config.py  errors.py  ntfyr.py
scripts/: ntfyr
tests/: conftest.py  test_config.py  test_end_to_end.py  test_main_args.py  test_ntfyr.py
tests/fixtures/: ntfy_server.py
