[metadata]
name = ntfyr
version = 0.2.0
author = haxwithaxe
author_email = spam@haxwithaxe.net
description = A simple client for ntfy.sh.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
classifiers = 
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2
    tzlocal>=4
project_urls = 
    homepage = https://github.com/haxwithaxe/ntfyr
    issues = https://github.com/haxwithaxe/ntfyr/issues
scripts = 
    scripts/ntfyr
