[metadata]
name = ntfyr
author = haxwithaxe
author_email = spam@haxwithaxe.net
description = A simple client for ntfy.sh.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0+
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2
    tzlocal>=4
project_urls =
    homepage = https://github.com/haxwithaxe/ntfyr
    issues = https://github.com/haxwithaxe/ntfyr/issues

[options.entry_points]
console_scripts =
    ntfyr=ntfyr.__main__:main

[options.extras_require]
dev =
    pre-commit
    flake8
    flake8-docstrings
    flake8-bugbear
    flake8-simplify
    black

testing =
    setuptools
    pytest
    pytest-cov
    pytest-mock

[tool:pytest]
addopts =
    --cov ntfyr --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
     system: mark end-to-end system tests

[devpi:upload]
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 80
extend_ignore =
    D107  # Don't need __init__ docstrings *and* class docstrings
    E203  # Handled by Black
    E266  # Allow multiple leading # for hierarchical comments
    W503  # Handled by Black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
